# obstacle_extractor

./: .gitignore  CMakeLists.txt  README.md  install_pcl.sh
config/: config.txt
src/: main.cpp
